tests/error/iter_errors/iter_missing.err
Error: Not iterable (at $FILE:16:13)
   | 
14 | @guppy(module)
15 | def test(x: MyType) -> None:
16 |     for _ in x:
   |              ^ Expression of type `MyType` is not iterable

Help: Implement missing method: `__iter__: MyType -> ?Iter`

Guppy compilation failed due to 1 previous error
